Attempt to fix address bar covering letter bank on iOS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,6 +86,8 @@ body {
 }
 
 body {
+  padding-bottom: env(safe-area-inset-bottom);
+
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
